# pdb2cif

./: .pre-commit-config.yaml  CONTRIBUTIONS.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
pdb2cif/: __init__.py
pdb2cif/pdb/: atom.py  structure.py  types.py  utils.py
pdb2cif/scripts/: pdb2cif.py
setup_config/: base.cfg  generator.py
