[metadata]
name = pdb2cif
version = attr: pdb2cif.__version__
description = PDB to mmCIF conversion tool
long_description = file: README.md
long_description_content_type = text/markdown

author = Feigl, Elija
author_email = elija.feigl@tum.de
url = https://github.com/elija-feigl/pdb2cif
project_urls =
    Github repository = https://github.com/elija-feigl/pdb2cif

license = GPL-3
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: GNU General Public License Version 3
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
install_requires =
    numpy>=1.21.0
    click>=8.0.1
python_requires = >=3.8
zip_safe = no

[options.entry_points]
console_scripts =
        pdb2cif = pdb2cif.scripts.pdb2cif:pdb2cif

[options.extras_require]
testing =
    flake8==3.9.2
    pytest==6.2.5
    pytest-cov==2.12.1
    mypy==0.910

[flake8]
max-line-length = 160

[options.package_data]
pdb2cif = py.typed
